--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@mui/material": "^5.13.2",
     "@mui/x-data-grid": "^6.5.0",
     "daisyui": "^2.51.6",
+    "date-fns": "^2.30.0",
     "next": "^13.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
