--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.13.2",
     "@mui/x-data-grid": "^6.5.0",
+    "axios": "^1.4.0",
     "daisyui": "^2.51.6",
     "date-fns": "^2.30.0",
     "next": "^13.4.1",
