--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.11.16",
+    "@mui/lab": "^5.0.0-alpha.137",
     "@mui/material": "^5.13.2",
     "@mui/x-data-grid": "^6.5.0",
     "@toast-ui/calendar": "^2.1.3",
